Actualización de css y agregado de nuevas imágenes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container hero-inner">
                 <h1>Senderos Uruguayos</h1>
                 <p>Turismo de naturaleza: senderismo, observación de aves, paisajes y cascadas.</p>
-                <img src="assets/img/hero.png" alt="Senderismo" />
+                <img src="assets/img/contorno-uy.png" alt="Senderismo" />
             </div>
         </section>
 
